- Fix splitView on mobile - Fix Safari releated bugs

--- a/src/co/common/button/index.module.styl
+++ b/src/co/common/button/index.module.styl
@@ -13,7 +13,6 @@
     border-radius: var(--border-radius)
     font-size: var(--primary-font-size)
     cursor: pointer
-    flex-shrink: 0
     white-space: nowrap
     outline: none
     line-height: 2
